# deepin-keyring-whitebox

./: CMakeLists.txt
debian/: changelog  control  copyright  deepin-keyring-whitebox.install  libdeepin-keyring-whitebox-dev.install
misc/: CMakeLists.txt
misc/autostart/: deepin-keyring-whitebox-notify.desktop
misc/dsg-configs/: org.deepin.dde.keyring.whitebox.json
misc/pam.d/: deepin-keyring-whitebox-password
misc/pkgconfig/: libdeepin-keyring-whitebox.pc.in
src/: CMakeLists.txt
src/core/: CMakeLists.txt  common.c  common.h  dkbackendclient.c  dkbackendclient.h  dkconfig.c  dkconfig.h  dkcrypt.c  dkcrypt.h  dkfile.c  dkfile.h  dkkey.c  dkkey.h  dklog.c  dklog.h  dklogin.c  dklogin.h  gnomekeyringclient.c  gnomekeyringclient.h
src/deepin-keyring-whitebox/: CMakeLists.txt  main.c
src/dpa-deepin-keyring-whitebox-plugin/: CMakeLists.txt  dpa-deepin-keyring-whitebox.cpp  dpa-deepin-keyring-whitebox.h  dpa-deepin-keyring-whitebox.json
src/libdeepin-keyring-whitebox/: CMakeLists.txt  deepin_keyring_whitebox.c  deepin_keyring_whitebox.h
src/pam-deepin-keyring/: CMakeLists.txt  pamkeyring.c
src/tests/: CMakeLists.txt  global_test_env.cpp  test_common.cpp  test_dk_config.cpp  test_dk_file.cpp  test_dk_key.cpp
